Added some docstrings

--- a/RNN-QSR.ipynb
+++ b/RNN-QSR.ipynb
@@ -121,9 +121,14 @@
     "        return self.lin(out)\n",
     "    \n",
     "    def logprobability(self,input):\n",
-    "        \"\"\"Compute the logscale probability of a given state\"\"\"\n",
+    "        \"\"\"Compute the logscale probability of a given state\n",
+    "            Inputs:\n",
+    "                input - [B,L,1] matrix of zeros and ones for ground/excited states\n",
+    "            Returns:\n",
+    "                logp - [B] size vector of logscale probability labels\n",
+    "        \"\"\"\n",
     "        \n",
-    "        #Input should have shape [N,L,1]\n",
+    "        #Input should have shape [B,L,1]\n",
     "        B,L,one=input.shape\n",
     "        \n",
     "        #first prediction is with the zero input vector\n",
@@ -149,9 +154,11 @@
     "        return logp\n",
     "    def sample(self,B,L):\n",
     "        \"\"\" Generates a set states\n",
-    "        Parameters:\n",
+    "        Inputs:\n",
     "            B (int)            - The number of states to generate in parallel\n",
     "            L (int)            - The length of generated vectors\n",
+    "        Returns:\n",
+    "            samples - [B,L,1] matrix of zeros and ones for ground/excited states\n",
     "        \"\"\"\n",
     "        if self.rnntype==\"LSTM\":\n",
     "            h=[torch.zeros([1,B,128]).to(device),\n",
@@ -179,6 +186,17 @@
     "        return input[:,1:,:]\n",
     "    \n",
     "    def sample_with_labels_OLD(self,B,L,grad=False):\n",
+    "        \"\"\"Inputs:\n",
+    "            B (int) - The number of states to generate in parallel\n",
+    "            L (int) - The length of generated vectors\n",
+    "            grad (boolean) - Whether or not to use gradients\n",
+    "        \n",
+    "        Returns:\n",
+    "            samples - [B,L,1] matrix of zeros and ones for ground/excited states\n",
+    "            logppl - [B*L] vector of logscale probabilities ln[p(s')] where s'[i+B*j] had one spin flipped at position j\n",
+    "                    relative to s[i]\n",
+    "        \"\"\"\n",
+    "        \n",
     "        sample=self.sample(B,L)\n",
     "        sflip = torch.zeros([B*L,L,1],device=device)\n",
     "        for j in range(L):\n",
@@ -196,6 +214,15 @@
     "        return sample,probs\n",
     "    \n",
     "    def sample_with_labels(self,B,L,grad=False):\n",
+    "        \"\"\"Inputs:\n",
+    "            B (int) - The number of states to generate in parallel\n",
+    "            L (int) - The length of generated vectors\n",
+    "            grad (boolean) - Whether or not to use gradients\n",
+    "        Returns:\n",
+    "            samples - [B,L,1] matrix of zeros and ones for ground/excited states\n",
+    "            logppl - [B,L] matrix of logscale probabilities ln[p(s')] where s'[i+B*j] had one spin flipped at position j\n",
+    "                    relative to s[i]\n",
+    "        \"\"\"\n",
     "        sample=self.sample(B,L)\n",
     "        sflip = torch.zeros([B,L,L,1],device=device)\n",
     "        for j in range(L):\n",
@@ -272,7 +299,7 @@
     "        Inputs:\n",
     "            samples - [B,L,1] matrix of zeros and ones for ground/excited states\n",
     "            logp - size B vector of logscale probabilities ln[p(s)]\n",
-    "            logppl - size B*L vector of logscale probabilities ln[p(s')] where s'[i+B*j] had one spin flipped at position j\n",
+    "            logppl - [B,L] matrix of logscale probabilities ln[p(s')] where s'[i+B*j] had one spin flipped at position j\n",
     "                    relative to s[i]\n",
     "        Returns:\n",
     "            size B vector of energies Hloc(s)\n",
