Changed up how it handles large probability shifts

--- a/RNN-QSR.ipynb
+++ b/RNN-QSR.ipynb
@@ -1350,10 +1350,10 @@
       "torch.Size([10, 16, 1])\n",
       "torch.Size([10, 16, 1])\n",
       "torch.Size([10, 16, 1]) torch.Size([10, 16])\n",
-      "tensor(-11.0916, device='cuda:0', grad_fn=<SelectBackward0>) \n",
-      " tensor([[-11.0952, -11.0924, -11.0911, -11.0908, -11.0915, -11.0916, -11.0918,\n",
-      "         -11.0910, -11.0901, -11.0898, -11.0900, -11.0908, -11.0935, -11.0907,\n",
-      "         -11.0904, -11.0932]], device='cuda:0')\n",
+      "tensor(-11.1797, device='cuda:0', grad_fn=<SelectBackward0>) \n",
+      " tensor([[-11.1022, -11.2537, -11.1035, -11.1032, -11.2554, -11.2554, -11.1035,\n",
+      "         -11.1036, -11.2551, -11.2551, -11.1037, -11.1037, -11.2550, -11.2550,\n",
+      "         -11.1039, -11.1045]], device='cuda:0')\n",
       "RNN(\n",
       "  (rnn): LSTM(1, 128, batch_first=True)\n",
       "  (lin): Sequential(\n",
@@ -1419,22 +1419,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.5031, 0.5058, 0.5068, 0.5071], device='cuda:0')\n",
-      "tensor([0.4697, 0.4856, 0.3642, 0.1907], device='cuda:0')\n"
+      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n",
+      "tensor([0.7215, 0.8587, 0.9205, 0.9273], device='cuda:0')\n"
      ]
     }
    ],
    "source": [
     "bsize=512\n",
     "\n",
-    "testrnn,optimizer=new_rnn_with_optim(\"GRU\",128,lr=1e-3)\n",
+    "trainrnn,optimizer=new_rnn_with_optim(\"GRU\",128,lr=1e-3)\n",
     "samplernn = RNN(rnntype=\"GRU\",Nh=128)\n",
     "\n",
     "for target_param in samplernn.parameters():\n",
     "    target_param.data.copy_(target_param.data*5)\n",
     "\n",
     "with torch.no_grad():\n",
-    "    print(testrnn(torch.zeros([1,4,1],device=device))[0,:,0])\n",
+    "    print(trainrnn(torch.zeros([1,4,1],device=device))[0,:,0])\n",
     "    print(samplernn(torch.zeros([1,4,1],device=device))[0,:,0])"
    ]
   },
@@ -1448,16 +1448,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.4875, 0.4898, 0.4239, 0.2904], device='cuda:0')\n",
-      "tensor([0.4958, 0.4984, 0.4971, 0.4957], device='cuda:0')\n",
-      "tensor([0.5004, 0.5021, 0.5028, 0.5030], device='cuda:0')\n",
-      "tensor([0.5023, 0.5046, 0.5054, 0.5057], device='cuda:0')\n",
-      "tensor([0.5028, 0.5054, 0.5063, 0.5067], device='cuda:0')\n",
-      "tensor([0.5030, 0.5057, 0.5066, 0.5070], device='cuda:0')\n",
-      "tensor([0.5031, 0.5058, 0.5067, 0.5071], device='cuda:0')\n",
-      "tensor([0.5031, 0.5058, 0.5068, 0.5071], device='cuda:0')\n",
-      "tensor([0.5031, 0.5058, 0.5068, 0.5071], device='cuda:0')\n",
-      "tensor([0.5031, 0.5058, 0.5068, 0.5071], device='cuda:0')\n"
+      "tensor([0.6782, 0.8047, 0.8746, 0.8904], device='cuda:0')\n",
+      "tensor([0.5183, 0.5302, 0.5402, 0.5463], device='cuda:0')\n",
+      "tensor([0.5001, 0.5020, 0.5028, 0.5034], device='cuda:0')\n",
+      "tensor([0.4968, 0.4974, 0.4978, 0.4980], device='cuda:0')\n",
+      "tensor([0.4954, 0.4959, 0.4964, 0.4966], device='cuda:0')\n",
+      "tensor([0.4948, 0.4954, 0.4959, 0.4961], device='cuda:0')\n",
+      "tensor([0.4946, 0.4952, 0.4957, 0.4959], device='cuda:0')\n",
+      "tensor([0.4945, 0.4952, 0.4956, 0.4958], device='cuda:0')\n",
+      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n",
+      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n"
      ]
     }
    ],
@@ -1468,10 +1468,10 @@
     "        \n",
     "for x in range(100):\n",
     "    with torch.no_grad():\n",
-    "        momentum_update(0.90,samplernn,testrnn)\n",
+    "        momentum_update(0.90,samplernn,trainrnn)\n",
     "        if x%10==0:\n",
     "            print(samplernn(torch.zeros([1,4,1],device=device))[0,:,0])\n",
-    "momentum_update(0.0,samplernn,testrnn)"
+    "momentum_update(0.0,samplernn,trainrnn)"
    ]
   },
   {
@@ -1484,14 +1484,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.5031, 0.5058, 0.5068, 0.5071], device='cuda:0')\n",
-      "tensor([0.5031, 0.5058, 0.5068, 0.5071], device='cuda:0')\n"
+      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n",
+      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n"
      ]
     }
    ],
    "source": [
     "with torch.no_grad():\n",
-    "    print(testrnn(torch.zeros([1,4,1],device=device))[0,:,0])\n",
+    "    print(trainrnn(torch.zeros([1,4,1],device=device))[0,:,0])\n",
     "    print(samplernn(torch.zeros([1,4,1],device=device))[0,:,0])"
    ]
   },
@@ -1528,7 +1528,8 @@
      "output_type": "stream",
      "text": [
       "512 16 32\n",
-      "0,2.81|86,-0.24|173,-0.30|260,-0.32|346,-0.32|440,-0.33|"
+      "2.7981600761413574\n",
+      "0,2.65|86,-0.25|171,-0.30|257,-0.31|342,-0.32|435,-0.33|526,-0.34|"
      ]
     }
    ],
@@ -1543,14 +1544,22 @@
     "sqrtp_queue=torch.zeros([bsize]).to(device)\n",
     "Eo_queue = torch.zeros([BlockNum]).to(device)\n",
     "\n",
+    "def fill_queue():\n",
+    "    global sample,simp,sqrtp,E_i\n",
+    "    for i in range(BlockNum):\n",
+    "        sample,sump,sqrtp = samplernn.sample_with_labelsALT(BbyL,Lx*Ly,grad=False)\n",
+    "        with torch.no_grad():\n",
+    "            #create and store true values for energy\n",
+    "            lp=samplernn.logprobability(sample)\n",
+    "            E_i=h.localenergyALT(sample,lp,sump,sqrtp)\n",
+    "            Eo_queue[i]=E_i.mean()/(Lx*Ly)\n",
+    "            samplequeue[i*BbyL:(i+1)*BbyL]=sample\n",
+    "            sump_queue[i*BbyL:(i+1)*BbyL]=sump\n",
+    "            sqrtp_queue[i*BbyL:(i+1)*BbyL]=sqrtp\n",
     "\n",
-    "for i in range(BlockNum):\n",
-    "    sample,sump,sqrtp = samplernn.sample_with_labelsALT(BbyL,Lx*Ly,grad=False)\n",
-    "    with torch.no_grad():\n",
-    "        samplequeue[i*BbyL:(i+1)*BbyL]=sample\n",
-    "        sump_queue[i*BbyL:(i+1)*BbyL]=sump\n",
-    "        sqrtp_queue[i*BbyL:(i+1)*BbyL]=sqrtp\n",
-    "\n",
+    "fill_queue()\n",
+    "print(E_i.mean().item()/Lx/Ly)\n",
+    "            \n",
     "if not USEQUEUE:\n",
     "    nqueue_updates = BlockNum\n",
     "else:\n",
@@ -1598,6 +1607,8 @@
     "            with torch.no_grad():\n",
     "                #set test rnn weights back to the sample rnn weights\n",
     "                momentum_update(0.0,testrnn,samplernn)\n",
+    "                #refill the queue to get accurate probabilities\n",
+    "                fill_queue()\n",
     "        else:\n",
     "            #do your regular momentum update\n",
     "            momentum_update(M,samplernn,testrnn)\n",
@@ -1618,8 +1629,11 @@
     "\n",
     "fig = plt.figure(1,figsize=(6,2.5), dpi=120, facecolor='w', edgecolor='k')\n",
     "\n",
-    "plt.plot(losses,marker='o',markersize=2,linewidth=0.0,markevery=5,label=\"RNN\")\n",
+    "plt.plot(losses,marker='o',markersize=2,linewidth=0.0,markevery=5,label=\"RNN Train\")\n",
+    "plt.plot(true_energies,color='r',marker='o',markersize=2,linewidth=0.0,markevery=5,label=\"RNN Sample\")\n",
     "plt.plot([0,len(losses)],[exact_energy,exact_energy],'k--')\n",
+    "\n",
+    "plt.ylim(max(min(losses),-1),max(losses))\n",
     "\n",
     "plt.xlabel(\"Step\",fontsize=15)\n",
     "plt.ylabel(\"$\\\\langle H \\\\rangle$\",fontsize=20)\n",
@@ -1628,9 +1642,10 @@
     "plt.show()\n",
     "\n",
     "fig = plt.figure(1,figsize=(6,2.5), dpi=120, facecolor='w', edgecolor='k')\n",
-    "plt.plot(abs(np.array(losses)-exact_energy),marker='o',markersize=2,linewidth=0.0,markevery=5,label=\"RNN\")\n",
+    "plt.plot(np.array(losses)-exact_energy,marker='o',markersize=2,linewidth=0.0,markevery=5,label=\"RNN Train\")\n",
+    "plt.plot(np.array(true_energies)-exact_energy,alpha=0.1,color='r',marker='o',markersize=2,linewidth=0.0,markevery=5,label=\"RNN Sample\")\n",
     "plt.yscale(\"log\")\n",
-    "plt.ylim(5e-3,5)\n",
+    "plt.ylim(1e-3,5)\n",
     "plt.xlabel(\"Step\",fontsize=15)\n",
     "plt.ylabel(\"$\\\\langle H \\\\rangle-H_{min}$\",fontsize=20)\n",
     "plt.legend(loc=\"best\")\n",
@@ -1675,7 +1690,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a88f4102",
+   "id": "27c0e330",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1699,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19f7544d",
+   "id": "85affde9",
    "metadata": {},
    "source": [
     "# Save and Push"
@@ -1693,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f220faf",
+   "id": "fae6af72",
    "metadata": {},
    "outputs": [],
    "source": [
