Changed message when rnn probability distributions differ

--- a/RNN-QSR.ipynb
+++ b/RNN-QSR.ipynb
@@ -1350,10 +1350,10 @@
       "torch.Size([10, 16, 1])\n",
       "torch.Size([10, 16, 1])\n",
       "torch.Size([10, 16, 1]) torch.Size([10, 16])\n",
-      "tensor(-11.1797, device='cuda:0', grad_fn=<SelectBackward0>) \n",
-      " tensor([[-11.1022, -11.2537, -11.1035, -11.1032, -11.2554, -11.2554, -11.1035,\n",
-      "         -11.1036, -11.2551, -11.2551, -11.1037, -11.1037, -11.2550, -11.2550,\n",
-      "         -11.1039, -11.1045]], device='cuda:0')\n",
+      "tensor(-10.9319, device='cuda:0', grad_fn=<SelectBackward0>) \n",
+      " tensor([[-10.9745, -10.9726, -10.9719, -10.9716, -10.8928, -10.9721, -10.8934,\n",
+      "         -10.9711, -10.9705, -10.9703, -10.9705, -10.9714, -10.8929, -10.8929,\n",
+      "         -10.9717, -10.9713]], device='cuda:0')\n",
       "RNN(\n",
       "  (rnn): LSTM(1, 128, batch_first=True)\n",
       "  (lin): Sequential(\n",
@@ -1419,8 +1419,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n",
-      "tensor([0.7215, 0.8587, 0.9205, 0.9273], device='cuda:0')\n"
+      "tensor([0.5059, 0.5042, 0.5034, 0.5030], device='cuda:0')\n",
+      "tensor([0.1974, 0.1074, 0.0844, 0.0499], device='cuda:0')\n"
      ]
     }
    ],
@@ -1432,10 +1432,12 @@
     "\n",
     "for target_param in samplernn.parameters():\n",
     "    target_param.data.copy_(target_param.data*5)\n",
+    "    \n",
+    "    \n",
     "\n",
     "with torch.no_grad():\n",
     "    print(trainrnn(torch.zeros([1,4,1],device=device))[0,:,0])\n",
-    "    print(samplernn(torch.zeros([1,4,1],device=device))[0,:,0])"
+    "    print(samplernn(torch.zeros([1,4,1],device=device))[0,:,0])\n"
    ]
   },
   {
@@ -1448,16 +1450,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.6782, 0.8047, 0.8746, 0.8904], device='cuda:0')\n",
-      "tensor([0.5183, 0.5302, 0.5402, 0.5463], device='cuda:0')\n",
-      "tensor([0.5001, 0.5020, 0.5028, 0.5034], device='cuda:0')\n",
-      "tensor([0.4968, 0.4974, 0.4978, 0.4980], device='cuda:0')\n",
-      "tensor([0.4954, 0.4959, 0.4964, 0.4966], device='cuda:0')\n",
-      "tensor([0.4948, 0.4954, 0.4959, 0.4961], device='cuda:0')\n",
-      "tensor([0.4946, 0.4952, 0.4957, 0.4959], device='cuda:0')\n",
-      "tensor([0.4945, 0.4952, 0.4956, 0.4958], device='cuda:0')\n",
-      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n",
-      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n"
+      "tensor([0.2647, 0.1766, 0.1474, 0.1105], device='cuda:0')\n",
+      "tensor([0.4801, 0.4804, 0.4780, 0.4761], device='cuda:0')\n",
+      "tensor([0.4973, 0.4970, 0.4965, 0.4960], device='cuda:0')\n",
+      "tensor([0.5025, 0.5013, 0.5006, 0.5001], device='cuda:0')\n",
+      "tensor([0.5046, 0.5030, 0.5023, 0.5019], device='cuda:0')\n",
+      "tensor([0.5054, 0.5038, 0.5030, 0.5026], device='cuda:0')\n",
+      "tensor([0.5057, 0.5040, 0.5033, 0.5029], device='cuda:0')\n",
+      "tensor([0.5058, 0.5041, 0.5034, 0.5030], device='cuda:0')\n",
+      "tensor([0.5059, 0.5042, 0.5034, 0.5030], device='cuda:0')\n",
+      "tensor([0.5059, 0.5042, 0.5034, 0.5030], device='cuda:0')\n"
      ]
     }
    ],
@@ -1484,8 +1486,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n",
-      "tensor([0.4945, 0.4951, 0.4956, 0.4958], device='cuda:0')\n"
+      "tensor([0.5059, 0.5042, 0.5034, 0.5030], device='cuda:0')\n",
+      "tensor([0.5059, 0.5042, 0.5034, 0.5030], device='cuda:0')\n"
      ]
     }
    ],
@@ -1528,8 +1530,8 @@
      "output_type": "stream",
      "text": [
       "512 16 32\n",
-      "2.7981600761413574\n",
-      "0,2.65|86,-0.25|171,-0.30|257,-0.31|342,-0.32|435,-0.33|526,-0.34|"
+      "2.7875256538391113\n",
+      "0,2.77|"
      ]
     }
    ],
@@ -1558,7 +1560,7 @@
     "            sqrtp_queue[i*BbyL:(i+1)*BbyL]=sqrtp\n",
     "\n",
     "fill_queue()\n",
-    "print(E_i.mean().item()/Lx/Ly)\n",
+    "print(Eo_queue.mean().item())\n",
     "            \n",
     "if not USEQUEUE:\n",
     "    nqueue_updates = BlockNum\n",
@@ -1583,7 +1585,7 @@
     "            sqrtp_queue[i*BbyL:(i+1)*BbyL]=sqrtp\n",
     "        i=(i+1)%BlockNum\n",
     "    \n",
-    "    logp=testrnn.logprobability(samplequeue)\n",
+    "    logp=trainrnn.logprobability(samplequeue)\n",
     "    \n",
     "    with torch.no_grad():\n",
     "        E=h.localenergyALT(samplequeue,logp,sump_queue,sqrtp_queue)\n",
@@ -1594,7 +1596,7 @@
     "    ERR  = Eo/(Lx*Ly)\n",
     "    losses.append(ERR.cpu().item())\n",
     "    true_energies.append(E_i.mean().cpu().item()/(Lx*Ly))\n",
-    "    testrnn.zero_grad()        \n",
+    "    trainrnn.zero_grad()        \n",
     "    loss.backward()\n",
     "    optimizer.step()\n",
     "    \n",
@@ -1602,16 +1604,18 @@
     "        #if Energy sees an unrealistic improvement\n",
     "        #ignore this at early stages\n",
     "        if x>2000 and Eo_queue.min()-losses[-1]>TOL:\n",
-    "            print(\"s\",end=\"\")\n",
+    "            \n",
     "            #update momentum and comtinue\n",
     "            with torch.no_grad():\n",
     "                #set test rnn weights back to the sample rnn weights\n",
-    "                momentum_update(0.0,testrnn,samplernn)\n",
+    "                momentum_update(0.0,trainrnn,samplernn)\n",
     "                #refill the queue to get accurate probabilities\n",
     "                fill_queue()\n",
+    "                \n",
+    "                print(\"\",end=\"<%.3f>\"%Eo_queue.mean())\n",
     "        else:\n",
     "            #do your regular momentum update\n",
-    "            momentum_update(M,samplernn,testrnn)\n",
+    "            momentum_update(M,samplernn,trainrnn)\n",
     "\n",
     "    \n",
     "    if x%500==0:\n",
@@ -1690,7 +1694,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27c0e330",
+   "id": "f71e1779",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,7 +1703,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "85affde9",
+   "id": "05f616ea",
    "metadata": {},
    "source": [
     "# Save and Push"
@@ -1708,7 +1712,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fae6af72",
+   "id": "74c9e5a3",
    "metadata": {},
    "outputs": [],
    "source": [
