Fixed doubling in help ?

--- a/RNN-QSR.ipynb
+++ b/RNN-QSR.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8d704dd",
+   "id": "0caea123",
    "metadata": {},
    "source": [
     "# How Sampler works:\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 76,
    "id": "ab5dec33",
    "metadata": {
     "scrolled": true
@@ -198,24 +198,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "class S\bSa\bam\bmp\bpl\ble\ber\br(torch.nn.modules.module.Module)\n",
+      "lass Sampler(torch.nn.modules.module.Module)\n",
       " |  Sampler(device=device(type='cuda', index=0))\n",
       " |  \n",
       " |  \n",
       " |  \n",
       " |  Methods defined here:\n",
       " |  \n",
-      " |  _\b__\b_i\bin\bni\bit\bt_\b__\b_(self, device=device(type='cuda', index=0))\n",
+      " |  __init__(self, device=device(type='cuda', index=0))\n",
       " |      Initializes internal Module state, shared by both nn.Module and ScriptModule.\n",
       " |  \n",
-      " |  l\blo\bog\bgp\bpr\bro\bob\bba\bab\bbi\bil\bli\bit\bty\by(self, input)\n",
+      " |  logprobability(self, input)\n",
       " |      Compute the logscale probability of a given state\n",
       " |      Inputs:\n",
       " |          input - [B,L,1] matrix of zeros and ones for ground/excited states\n",
       " |      Returns:\n",
       " |          logp - [B] size vector of logscale probability labels\n",
       " |  \n",
-      " |  s\bsa\bam\bmp\bpl\ble\be(self, B, L)\n",
+      " |  sample(self, B, L)\n",
       " |      Generates a set states\n",
       " |      Inputs:\n",
       " |          B (int)            - The number of states to generate in parallel\n",
@@ -223,7 +223,7 @@
       " |      Returns:\n",
       " |          samples - [B,L,1] matrix of zeros and ones for ground/excited states\n",
       " |  \n",
-      " |  s\bsa\bam\bmp\bpl\ble\be_\b_w\bwi\bit\bth\bh_\b_l\bla\bab\bbe\bel\bls\bs(self, B, L, grad=False, saveram=False)\n",
+      " |  sample_with_labels(self, B, L, grad=False, saveram=False)\n",
       " |      Inputs:\n",
       " |          B (int) - The number of states to generate in parallel\n",
       " |          L (int) - The length of generated vectors\n",
@@ -233,7 +233,7 @@
       " |          logppl - [B,L] matrix of logscale probabilities ln[p(s')] where s'[i+B*j] had one spin flipped at position j\n",
       " |                  relative to s[i]\n",
       " |  \n",
-      " |  s\bsa\bam\bmp\bpl\ble\be_\b_w\bwi\bit\bth\bh_\b_l\bla\bab\bbe\bel\bls\bsA\bAL\bLT\bT(self, B, L, grad=False, saveram=False)\n",
+      " |  sample_with_labelsALT(self, B, L, grad=False, saveram=False)\n",
       " |      Returns:\n",
       " |      samples  - [B,L,1] matrix of zeros and ones for ground/excited states\n",
       " |      logsqrtp - size B vector of average (log p)/2 values used for numerical stability \n",
@@ -247,18 +247,18 @@
    "source": [
     "import pydoc\n",
     "\n",
-    "\n",
     "#help function prints too much stuff so I'm getting the info and removing the unimportant bits\n",
     "documentation = pydoc.text.document(Sampler, \"\").split(\"--------\")[0]\n",
-    "title= documentation.split(\"Base class for all neural network modules\")[0]\n",
-    "info = documentation.split(\"builtins.object\")[1]\n",
-    "print(title+info)"
+    "out= documentation.split(\"Base class for all neural network modules\")[0]+documentation.split(\"builtins.object\")[1]\n",
+    "toprint,i=\"\",1\n",
+    "while i<len(out):toprint+= out[i] if (out[i]!= \"\\x08\" and out[i-1] != \"\\x08\") else \"\";i+=1\n",
+    "print(toprint)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd01470d",
+   "id": "d1abd96a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fca82d3a",
+   "id": "44edc22d",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4c8ce3e",
+   "id": "2c6d40e0",
    "metadata": {},
    "source": [
     "# Estimating the Hamiltonian:\n",
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "137444a5",
+   "id": "8cd80ddf",
    "metadata": {},
    "source": [
     "# Setting Constants"
@@ -859,7 +859,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "978213ae",
+   "id": "41aa5de9",
    "metadata": {},
    "source": [
     "# Memory Queue Adjustment\n",
@@ -1065,7 +1065,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "d176b996",
+   "id": "f4232820",
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d5320728",
+   "id": "692a0fcf",
    "metadata": {},
    "outputs": [
     {
