Actually fixed the string doubling for good

--- a/RNN-QSR.ipynb
+++ b/RNN-QSR.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0caea123",
+   "id": "67a20fce",
    "metadata": {},
    "source": [
     "# How Sampler works:\n",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 82,
    "id": "ab5dec33",
    "metadata": {
     "scrolled": true
@@ -198,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lass Sampler(torch.nn.modules.module.Module)\n",
+      "class Sampler(torch.nn.modules.module.Module)\n",
       " |  Sampler(device=device(type='cuda', index=0))\n",
       " |  \n",
       " |  \n",
@@ -250,18 +250,10 @@
     "#help function prints too much stuff so I'm getting the info and removing the unimportant bits\n",
     "documentation = pydoc.text.document(Sampler, \"\").split(\"--------\")[0]\n",
     "out= documentation.split(\"Base class for all neural network modules\")[0]+documentation.split(\"builtins.object\")[1]\n",
-    "toprint,i=\"\",1\n",
+    "toprint,i=out[0],1\n",
     "while i<len(out):toprint+= out[i] if (out[i]!= \"\\x08\" and out[i-1] != \"\\x08\") else \"\";i+=1\n",
     "print(toprint)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d1abd96a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -378,7 +370,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "44edc22d",
+   "id": "6102ae6f",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +397,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c6d40e0",
+   "id": "4759ad35",
    "metadata": {},
    "source": [
     "# Estimating the Hamiltonian:\n",
@@ -799,7 +791,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cd80ddf",
+   "id": "876baf95",
    "metadata": {},
    "source": [
     "# Setting Constants"
@@ -859,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41aa5de9",
+   "id": "b689eb54",
    "metadata": {},
    "source": [
     "# Memory Queue Adjustment\n",
@@ -1065,7 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "f4232820",
+   "id": "d4751c17",
    "metadata": {},
    "outputs": [
     {
@@ -1230,7 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "692a0fcf",
+   "id": "3b68ddfc",
    "metadata": {},
    "outputs": [
     {
