--- a/RNN-QSR.ipynb
+++ b/RNN-QSR.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7ba8423",
+   "id": "2171951e",
    "metadata": {},
    "source": [
     "# Estimating the Rydberg Hamiltonian:\n",
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f5d6c4b",
+   "id": "30ff1c7f",
    "metadata": {},
    "source": [
     "# Samples & Labelling to get $\\langle \\Psi_{\\theta}|\\hat{H}|\\Psi_{\\theta} \\rangle$:\n",
@@ -597,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "8173399e",
+   "id": "8c689e27",
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +706,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02d63fac",
+   "id": "f1c15a24",
    "metadata": {},
    "source": [
     "# Massive Speedup idea:\n",
@@ -729,7 +729,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "eef52b3a",
+   "id": "48db2f00",
    "metadata": {},
    "source": [
     "# Downsides and workarounds\n",
@@ -745,7 +745,7 @@
     "Here the gradient descent algorithm is overfitting to the old sample distribution (and perhaps off-diagonal energies) every once and a while and losing a bunch of progress in the process.\n",
     "\n",
     "\n",
-    "Te current workaround is to have a separate rnn for sampling and training / labelling. The sampling rnn changes slowly and without gradients, and the training rnn changes faster and with gradients.\n",
+    "The current workaround is to have a separate rnn for sampling and training / labelling. The sampling rnn changes slowly and without gradients, and the training rnn changes faster and with gradients.\n",
     "\n",
     "Denoting the sampler as $P_{\\Theta_t}$ and trainer as $P_{\\theta_t}$, in one iteration we take:\n",
     "\n",
@@ -755,7 +755,7 @@
     "\n",
     "Here $m \\in [0,1)$ is our momentum and the higher it is, the slower $P_{\\Theta}$ changes\n",
     "\n",
-    "Also, if $P_{\\theta}$ gets 'too' far away from $P_{\\Theta}$ (which I can detect), I decidedto just set\n",
+    "Also, if training $P_{\\theta}$ gets 'too' far away from sampling $P_{\\Theta}$ (which I can detect), I decided to just set\n",
     "\n",
     "$\\theta_{t+1} \\leftarrow \\Theta_t$\n",
     "\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4beb5438",
+   "id": "3d194bc8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,7 +821,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a07b5e7a",
+   "id": "dc755641",
    "metadata": {},
    "source": [
     "# Setting Constants"
@@ -881,7 +881,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa84bfb9",
+   "id": "9722d8b8",
    "metadata": {},
    "source": [
     "# Memory Queue Adjustment\n",
@@ -1027,7 +1027,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "cfc2a375",
+   "id": "39dd92b9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1068,7 +1068,7 @@
   {
    "cell_type": "code",
    "execution_count": 143,
-   "id": "fe5dad35",
+   "id": "7aaab0c2",
    "metadata": {},
    "outputs": [
     {
@@ -1097,7 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": 138,
-   "id": "29832993",
+   "id": "15d04b03",
    "metadata": {},
    "outputs": [
     {
@@ -1126,7 +1126,7 @@
   {
    "cell_type": "code",
    "execution_count": 146,
-   "id": "5e4a9a48",
+   "id": "e64d4465",
    "metadata": {},
    "outputs": [
     {
@@ -1154,7 +1154,7 @@
   {
    "cell_type": "code",
    "execution_count": 133,
-   "id": "8f029b18",
+   "id": "3fb020c0",
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "id": "0e72ce96",
+   "id": "9f210556",
    "metadata": {},
    "outputs": [
     {
@@ -1216,7 +1216,7 @@
   {
    "cell_type": "code",
    "execution_count": 127,
-   "id": "2c654776",
+   "id": "41fa0a5a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1342,7 +1342,7 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "id": "4d664727",
+   "id": "7681102b",
    "metadata": {},
    "outputs": [
     {
