Added markdown cell for tfim

--- a/RNN-QSR.ipynb
+++ b/RNN-QSR.ipynb
@@ -373,6 +373,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f93bf6ca",
+   "metadata": {},
+   "source": [
+    "# Transverse Field Ising Model\n",
+    "\n",
+    "# $H = - \\sum_i S_z^iS_z^{i+1}+h\\sum_iS_x^i$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "8cafdfe0",
