Wrote function to train without a queue or sample RNN

--- a/Results.ipynb
+++ b/Results.ipynb
@@ -2058,7 +2058,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.system(\"python RNN_QSR.py\")\n"
+    "import os\n",
+    "os.system(\"python RNN_QSR.py L=10 K=128 Q=8 hamiltonian=TFIM J=1.0 h=-1.0 USEQUEUE=0 NLOOPS=1 steps=4000\")"
    ]
   },
   {
