Added transformer tests

--- a/TransformerSampler.ipynb
+++ b/TransformerSampler.ipynb
@@ -241,6 +241,24 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "1119cc12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "847681\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(sum (p.numel () for p in trainsformer.parameters ()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "55984674",
    "metadata": {},
    "outputs": [
@@ -248,16 +266,45 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "847774\n",
       "Output folder path established\n",
       "-0.40522 64\n",
-      "1,2.75|16,-0.25|31,-0.30|46,-0.30|61,-0.30|77,-0.33|92,-0.34|108,-0.36|123,-0.35|138,-0.34|154,-0.36|169,-0.38|184,-0.39|200,-0.40|215,-0.39|231,-0.39|246,-0.39|261,-0.39|276,-0.39|292,-0.39|307,-0.39|322,-0.40|337,-0.40|353,-0.40|368.2054371833801 12000\n"
+      "1,2.10|45,-0.31|89,-0.33|134,-0.38|178,-0.40|223,-0.39|267,-0.40|312,-0.39|356,-0.39|400,-0.40|445,-0.40|489,-0.40|533,-0.41|578,-0.40|622,-0.40|667,-0.40|711,-0.40|756,-0.40|800,-0.40|844,-0.41|889,-0.41|933,-0.41|978,-0.40|1022,-0.41|1067.2162992954254 12000\n"
      ]
     }
    ],
    "source": [
     "# train a gru\n",
     "op.dir=\"GRU\"\n",
-    "reg_train(op)"
+    "trainrnn,optimizer=new_rnn_with_optim(\"GRU\",459,lr=op.lr)\n",
+    "print(sum (p.numel () for p in trainrnn.parameters ()))\n",
+    "reg_train(op,(trainrnn,optimizer))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "d5b7dcff",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "413121\n",
+      "Output folder path established\n",
+      "-0.45776822 16\n",
+      "0,2.01|5,-0.38|10,-0.42|15,-0.44|20,-0.45|25,-0.45|31,-0.45|36,-0.45|41,-0.46|46,-0.45|51,-0.46|56,-0.45|61,-0.45|66,-0.46|71,-0.46|76,-0.46|82,-0.46|87,-0.44|92,-0.45|97,-0.46|102,-0.46|107,-0.45|112,-0.45|117,-0.46|122.32494974136353 12000\n"
+     ]
+    }
+   ],
+   "source": [
+    "Lx=4\n",
+    "op.L=Lx*Lx\n",
+    "op.dir=\"GRU\"\n",
+    "trainrnn,optimizer=new_rnn_with_optim(\"GRU\",320,lr=op.lr)\n",
+    "print(sum (p.numel () for p in trainrnn.parameters ()))\n",
+    "reg_train(op,(trainrnn,optimizer))"
    ]
   },
   {
