Added speedup in transformer sampling

--- a/TorchScript-SpeedTest.ipynb
+++ b/TorchScript-SpeedTest.ipynb
@@ -71,6 +71,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cc30e0b2",
+   "metadata": {},
+   "source": [
+    "$\\hat x_t = W_xx_t+b_x$\n",
+    "\n",
+    "$\\hat h_{t-1} = W_hh_{t-1}+b_h$\n",
+    "\n",
+    "$i_t = \\sigma(\\hat x_{i,t}+\\hat h_{i,t-1}) \\hspace{13mm}$ (input gate)\n",
+    "\n",
+    "$f_t = \\sigma(\\hat x_{f,t}+\\hat h_{f,t-1})\\hspace{10mm}$  (forget gate)\n",
+    "\n",
+    "$g_t = tanh(\\hat x_{g,t}+\\hat h_{g,t-1})\\hspace{6mm}$    (cell gate)\n",
+    "\n",
+    "$o_t = \\sigma(\\hat x_{o,t}+\\hat h_{o,t-1})\\hspace{12mm}$  (out gate)\n",
+    "\n",
+    "$c_t = f_t\\circ c_{t-1}+i_t\\circ g_t \\hspace{9mm}$ (cell update)\n",
+    "\n",
+    "$h_t = o_t\\circ tanh(c_t) \\hspace{16mm}$ (hidden state update)\n",
+    "\n",
+    "$c_t \\hspace{3mm}\\dot\\approx\\hspace{3mm} (1-\\alpha)\\cdot c_{t-1}+\\alpha(\\hat x_{g,t}+\\hat h_{g,t-1}) \\hspace{9mm}$ (cell update)\n",
+    "\n",
+    "$h_t \\hspace{3mm}\\dot\\approx\\hspace{3mm} \\beta c_t\\hspace{57mm}$ (hidden state update)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "a0dd17d5",
