--- a/RNN-TF.ipynb
+++ b/RNN-TF.ipynb
@@ -51,7 +51,15 @@
     "        \n",
     "        self.set_mask(Lx*Ly)\n",
     "        self.to(device)\n",
+    "        self.init_weights()\n",
     "\n",
+    "    def init_weights(self):\n",
+    "        self.num_weights = sum (p.numel () for p in self.parameters ())\n",
+    "        print(\"Initializing. . .\",self.num_weights)\n",
+    "        stdv=10/np.sqrt(self.num_weights)\n",
+    "        for weight in self.parameters():\n",
+    "            nn.init.normal_(weight, mean=0.0,std= stdv)\n",
+    "        \n",
     "    def forward(self, input):\n",
     "        # input is shape [B,L,1]\n",
     "        # add positional encoding to get shape [B,L,Nh]\n",
@@ -296,7 +304,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L                             \t\t\t256\n",
+      "L                             \t\t\t64\n",
       "Q                             \t\t\t1\n",
       "K                             \t\t\t32\n",
       "B                             \t\t\t32\n",
@@ -316,7 +324,7 @@
    "source": [
     "#Settings\n",
     "op=Opt()\n",
-    "Lx=16\n",
+    "Lx=8\n",
     "op.L=Lx*Lx\n",
     "op.Nh=128\n",
     "op.lr=5e-4\n",
@@ -398,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0fd1ca1b",
    "metadata": {},
    "outputs": [
@@ -408,8 +416,8 @@
      "text": [
       "Training. . .\n",
       "Output folder path established\n",
-      "-0.38052 256\n",
-      "2,2.90|"
+      "-0.40522 64\n",
+      "0,2.51|48,-0.31|96,-0.34|144,-0.38|191,-0.39|239,-0.39|287,-0.38|335,-0.38|383,-0.39|431,-0.39|480,-0.39|532,-0.39|585,-0.40|638,-0.39|691,-0.40|743,-0.40|796,-0.39|849,-0.39|901,-0.39|954,-0.39|1007,-0.39|1059,-0.39|1112,-0.40|1164,-0.39|1212.0738739967346 12000\n"
      ]
     }
    ],
