--- a/TransformerSampler.ipynb
+++ b/TransformerSampler.ipynb
@@ -26,8 +26,14 @@
    "outputs": [],
    "source": [
     "class PE2D(nn.Module):\n",
+    "    \"\"\"Positional Encoder for a 2D sequence\"\"\"\n",
     "    #TODO: Positional encoding is wrong because the spins are at index i+1 when we sample and get probabilities\n",
     "    def __init__(self, d_model, Lx,Ly,device,n_encode=None):\n",
+    "        \"\"\"\n",
+    "        Inputs:\n",
+    "            Lx (int) -- Size in the x dimension (axis 1)\n",
+    "            Ly (int) -- Size in the y dimension (axis 2)\n",
+    "        \"\"\"\n",
     "        super().__init__()\n",
     "        self.d_model = d_model\n",
     "        \n",
@@ -59,6 +65,7 @@
     "        self.L=Lx*Ly\n",
     "    \n",
     "    def forward(self, x):\n",
+    "        \"\"\"Adds a positional encoding (batch first)\"\"\"\n",
     "        return x + self.pe[:,:self.L,:]"
    ]
   },
@@ -70,19 +77,28 @@
    "outputs": [],
    "source": [
     "class SlowTransformer(Sampler):\n",
-    "    def __init__(self,Lx,Ly,device=device,Nh=128,decoder=False,dropout=0.0,num_layers=3, **kwargs):\n",
+    "    \"\"\"A transformer sampler which uses masked attention to calculate probabilities of a given state.\n",
+    "    Here each 'spin' is given a positional encoding and self-attention is calculated across each spin and all  previous spins\n",
+    "    \"\"\"\n",
+    "    def __init__(self,Lx,Ly,device=device,Nh=128,decoder=False,dropout=0.0,num_layers=3,nhead=8, **kwargs):\n",
+    "        \"\"\"\n",
+    "        Parameters:\n",
+    "            Lx,Ly (int) -- Sequence dimensions\n",
+    "            Nh (int) -- size of the input vector at each sequence element (same as d_model)\n",
+    "            decoder (bool) -- whether to use a TF decoder or encoder. Using a decoder isn't currently implemented\n",
+    "        \"\"\"\n",
     "        super(SlowTransformer, self).__init__(device=device)\n",
     "        \n",
     "        self.pe = PE2D(Nh, Lx,Ly,device)\n",
     "        \n",
     "        if decoder:\n",
     "            #Decoder only transformer\n",
-    "            self.decoder_layer = nn.TransformerDecoderLayer(d_model=Nh, nhead=8, dropout=dropout)\n",
+    "            self.decoder_layer = nn.TransformerDecoderLayer(d_model=Nh, nhead=nhead, dropout=dropout)\n",
     "            self.transformer = nn.TransformerDecoder(self.decoder_layer, num_layers=num_layers)\n",
     "        else:\n",
     "            #Encoder only transformer\n",
     "            #misinterperetation on encoder made it so this code does not work\n",
-    "            self.encoder_layer = nn.TransformerEncoderLayer(d_model=Nh, nhead=8, dropout=dropout)\n",
+    "            self.encoder_layer = nn.TransformerEncoderLayer(d_model=Nh, nhead=nhead, dropout=dropout)\n",
     "            self.transformer = nn.TransformerEncoder(self.encoder_layer, num_layers=num_layers)        \n",
     "        \n",
     "        self.lin = nn.Sequential(\n",
@@ -97,12 +113,14 @@
     "        self.to(device)\n",
     "        \n",
     "    def set_mask(self, L):\n",
+    "        \"\"\"Initialize the self-attention mask\"\"\"\n",
     "        # take the log of a lower triangular matrix\n",
     "        self.L=L\n",
     "        self.mask = torch.log(torch.tril(torch.ones([L,L],device=self.device)))\n",
     "        self.pe.L=L\n",
     "\n",
     "    def forward(self, input):\n",
+    "        \n",
     "        # input is shape [B,L,1]\n",
     "        # add positional encoding to get shape [B,L,Nh]\n",
     "        if input.shape[1]!=self.L:\n",
@@ -213,9 +231,20 @@
    "outputs": [],
    "source": [
     "class FastTransformer(SlowTransformer):\n",
-    "    #TODO: Positional encoding is wrong because the spins are at index i+1 when we sample and get probabilities\n",
+    "    \"\"\"Same architecture as SlowTransformer (weights can be shared) but with improvements to sampling and labelling which\n",
+    "    can give a 2x performance boost\"\"\"\n",
     "    def _off_diag_labels(self,sample,B,L,grad,D=1): #_off_diag_labels\n",
-    "        \"\"\"label all of the flipped states  - set D as high as possible without it slowing down runtime\"\"\"\n",
+    "        \"\"\"label all of the flipped states  - set D as high as possible without it slowing down runtime\n",
+    "        Parameters:\n",
+    "            sample - [B,L,1] matrix of zeros and ones for ground/excited states\n",
+    "            B,L (int) - batch size and sequence length\n",
+    "            D (int) - Number of partitions sequence-wise. We must have L%D==0 (D divides L)\n",
+    "            \n",
+    "        Outputs:\n",
+    "            \n",
+    "            sample - same as input\n",
+    "            probs - [B,L] matrix of probabilities of states with the jth excitation flipped\n",
+    "        \"\"\"\n",
     "        sflip = torch.zeros([B,L,L,1],device=self.device)\n",
     "        #collect all of the flipped states into one array\n",
     "        for j in range(L):\n",
@@ -233,7 +262,6 @@
     "            out,cache=self.make_cache(self.pe(dsample).transpose(1,0))\n",
     "\n",
     "            probs=torch.zeros([B,L],device=self.device)\n",
-    "\n",
     "            #expand cache to group L//D flipped states\n",
     "            cache=cache.unsqueeze(2)\n",
     "\n",
@@ -311,12 +339,12 @@
     "        \n",
     "        Inputs:\n",
     "            tgt - Tensor of shape [L,B,1]\n",
-    "            cache - Tensor of shape ?\n",
+    "            cache - Tensor of shape [I,L,B,Nh]\n",
     "            idx - index from which to start\n",
     "            \n",
     "        Outputs:\n",
-    "            output - Tensor of shape [?,B,1]\n",
-    "            new_cache - Tensor of shape ?\n",
+    "            output - Tensor of shape [L+c,B,1]\n",
+    "            new_cache - Tensor of shape [I,L+c,B,Nh]\n",
     "        \"\"\"\n",
     "        output = tgt\n",
     "        new_token_cache = []\n",
@@ -400,19 +428,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "L                             \t\t\t256\n",
-      "Q                             \t\t\t4\n",
-      "K                             \t\t\t64\n",
-      "B                             \t\t\t256\n",
+      "L                             \t\t\t64\n",
+      "Q                             \t\t\t1\n",
+      "K                             \t\t\t16\n",
+      "B                             \t\t\t16\n",
       "TOL                           \t\t\t0.15\n",
       "M                             \t\t\t0.9\n",
-      "USEQUEUE                      \t\t\t1\n",
-      "NLOOPS                        \t\t\t1\n",
+      "USEQUEUE                      \t\t\t0\n",
+      "NLOOPS                        \t\t\t16\n",
       "hamiltonian                   \t\t\tRydberg\n",
       "steps                         \t\t\t12000\n",
-      "dir                           \t\t\tout\n",
+      "dir                           \t\t\tTF\n",
       "Nh                            \t\t\t128\n",
       "lr                            \t\t\t0.0005\n",
+      "kl                            \t\t\t0.0\n",
       "\n"
      ]
     }
@@ -420,22 +449,93 @@
    "source": [
     "#Settings\n",
     "op=Opt()\n",
-    "Lx=16\n",
+    "Lx=8\n",
     "op.L=Lx*Lx\n",
     "op.Nh=128\n",
     "op.lr=5e-4\n",
     "op.M=0.9\n",
-    "op.Q=4\n",
-    "op.K=64\n",
-    "op.USEQUEUE=1\n",
+    "op.Q=1\n",
+    "op.K=16\n",
+    "op.USEQUEUE=0\n",
+    "op.kl=0.0\n",
     "#op.apply(sys.argv[1:])\n",
     "op.B=op.K*op.Q\n",
+    "\n",
+    "#op.steps=4000\n",
+    "op.dir=\"TF\"\n",
+    "#op.steps=100\n",
+    "op.NLOOPS=16\n",
+    "\n",
+    "\n",
     "print(op)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "616bd3f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'L=64 Q=1 K=16 B=16 TOL=0.15 M=0.9 USEQUEUE=0 NLOOPS=16 hamiltonian=Rydberg steps=12000 dir=TF Nh=128 lr=0.0005 kl=0.0'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "op.cmd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "8e6e1919",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "op.kl=0.0\n",
+    "for x in range(5):\n",
+    "    os.system(\"python TF.py \"+op.cmd())\n",
+    "    \n",
+    "op.kl=0.25\n",
+    "for x in range(5):\n",
+    "    os.system(\"python TF.py \"+op.cmd())\n",
+    "    \n",
+    "op.kl=0.5\n",
+    "for x in range(5):\n",
+    "    os.system(\"python TF.py \"+op.cmd())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "7c4c03d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-9e1622b385b6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;36m1\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "1/0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "2f9a845c",
    "metadata": {},
    "outputs": [],
@@ -452,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "801d1ef9",
    "metadata": {
     "scrolled": false
@@ -475,20 +575,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "1119cc12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1795713\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(sum (p.numel () for p in trainsformer.parameters ()))"
+    "print(sum (p.numel () for p in trainsformer.parameters ()))\n"
    ]
   },
   {
@@ -498,23 +590,9 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Output folder path established\n",
-      "-0.38052 256\n",
-      "2.34702730178833\n",
-      "1,2.34|706,-0.29|1411,-0.30|"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#op.steps=4000\n",
-    "op.dir=\"TF\"\n",
-    "#op.steps=100\n",
-    "op.NLOOPS=16\n",
+    "\n",
     "if op.USEQUEUE:\n",
     "    queue_train(op,(trainsformer,sampleformer,optimizer))\n",
     "else:\n",
@@ -541,7 +619,7 @@
    "outputs": [],
    "source": [
     "print(\"Batch size 32:\")\n",
-    "\n",
+    " \n",
     "t=time.time()\n",
     "for x in range(50):\n",
     "    super(FastTransformer, trainsformer).sample(32,op.L)\n",
